--- a/05 - Flex Panel Gallery/css/styles.css
+++ b/05 - Flex Panel Gallery/css/styles.css
@@ -17,6 +17,7 @@ html {
   .panels {
     min-height: 100vh;
     overflow: hidden;
+    display: flex;
   }
 
   .panel {
@@ -34,6 +35,11 @@ html {
     font-size: 20px;
     background-size: cover;
     background-position: center;
+    flex: 1; /* evenly distribute the extra space */
+    justify-content: center;
+    align-items: center;
+    display: flex; /* nesting flex properties -- elements can be flex items and flex containers */
+    flex-direction: column;
   }
 
   .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -42,12 +48,23 @@ html {
   .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
   .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
-  /* Flex Children */
+  /* Flex Items */
   .panel > * {
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
+    /* border: 2px solid red; */
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+
+  .panel > *:first-child { transform: translateY(-100%); }
+  .panel.open-active > *:first-child {transform: translateY(0);}
+  .panel > *:last-child { transform: translateY(100%); }
+  .panel.open-active > *:last-child {transform: translateY(0);}
+
 
   .panel p {
     text-transform: uppercase;
@@ -61,5 +78,12 @@ html {
   }
 
   .panel.open {
+    flex: 5; /* when open, it grows 5x */
     font-size: 40px;
+   
+  }
+
+  .cta {
+      color: white;
+      text-decoration: none;
   }
